--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>BELAJAR CODING.</h1>
-        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
+        <h1>CASE ONE</h1>
+        <h1>PUJI SARI RAMADHAN</h1>
         <p>Progate adalah platform online untuk belajar coding.</p>
         <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
         <div class="btn-wrapper">
