--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Progate</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="animate.min.css">
   </head>
   <body>
     <header>
@@ -19,7 +20,7 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>CASE ONE</h1>
+        <h1 class="animated infinite bounce delay-2s">Case One</h1>
         <h1>PUJI SARI RAMADHAN</h1>
         <p>Progate adalah platform online untuk belajar coding.</p>
         <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
