--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1 class="animated infinite bounce delay-2s">Case One</h1>
+        <h1 class="zoomInUp">Case One</h1>
         <h1>PUJI SARI RAMADHAN</h1>
         <p>Progate adalah platform online untuk belajar coding.</p>
         <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
