--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Progate</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-     
   </head>
   <body>
     <header>
@@ -20,8 +19,8 @@
     </header>
     <div class="top-wrapper">
       <div class="container">
-        <h1>Case One</h1>
-        <h1>PUJI SARI RAMADHAN</h1>
+        <h1>BELAJAR CODING.</h1>
+        <h1>BELAJAR MENJADI LEBIH KREATIF.</h1>
         <p>Progate adalah platform online untuk belajar coding.</p>
         <p>Kami menawarkan lingkungan pemograman yang lengkap untuk mempermudah Anda memulai.</p>
         <div class="btn-wrapper">
